Take 2 on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Directories
-*/secrets/*
-*/target/*
+Scenic_Trips-ejb/target/
+Scenic_Trips-war/target/
+secrets/
+target/
+
 
 # File type
 *.ear
