--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 # Directories
 secrets/
-target/
+*/target/
 
-
-# File type
+# File types
 *.ear
 *.jar
 *.sec
 *.war
 
-# Specific files
-
+#specific files
