--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,10 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.univocity</groupId>
+			<artifactId>univocity-parsers</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 	</dependencies>
 </project>
