--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,20 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.matthewallbee</groupId>
     <artifactId>scenic-trips</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
 	<!-- Shared version number properties -->
 	<properties>
-		<org.springframework.version>3.0.0.RELEASE</org.springframework.version>
+		<org.springframework.version>4.3.17.RELEASE</org.springframework.version>
 	</properties>
+	
+	<modules>
+		<module>Scenic_Trips-ejb</module>
+	</modules>
+	
 	<dependencies>
 		<!-- Core utilities used by other modules.
 			Define this if you use Spring Utility APIs 
@@ -59,5 +64,32 @@
 			<artifactId>univocity-parsers</artifactId>
 			<version>2.8.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.jws</artifactId>
+			<version>10.0-b28</version>
+		</dependency>
 	</dependencies>
+	  <build>
+		<plugins>
+		  <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-ejb-plugin</artifactId>
+			<version>3.0.1</version>
+			<configuration>
+			  <!-- this is false by default -->
+			  <generateClient>true</generateClient>
+			</configuration>
+		  </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+		</plugins>
+	  </build>
 </project>
